# Thrill-Digger-Calculator

./: CMakeLists.txt  README.md  ThrillDiggerCalculator.exe.manifest  build.bat
src/: main.cpp  solver.h
